Bug 495613 - In search results, "Open Path" does not scroll to file
Summary: In search results, "Open Path" does not scroll to file
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 24.08.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-31 00:12 UTC by EpicTux123
Modified: 2024-12-09 21:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description EpicTux123 2024-10-31 00:12:18 UTC
When using "Open Path" or "Open Path in a New Tab" (right-click menu in a file) after searching for a file, the scrollbar doesn't go to the location of the file. It only works with "Open Path in New Window".

Operating System: Fedora Linux 40
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.11.4-201.fc40.x86_64 (64-bit)
Graphics Platform: X11
Comment 1 Akseli Lahtinen 2024-10-31 14:18:12 UTC
I can confirm this

1. Create folder in home with a lot of files, then a specifically named file
2. Start search from home folder for this specific file, make sure "Your files"  is selected
3. When file is found, right click, select open path
4. The scrollbar wont move to the file

dolphin 24.11.70
Operating System: Fedora Linux 41
KDE Plasma Version: 6.2.80
KDE Frameworks Version: 6.8.0
Qt Version: 6.7.2
Kernel Version: 6.11.5-300.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 2 Bug Janitor Service 2024-11-14 15:33:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/857
Comment 3 Akseli Lahtinen 2024-11-29 09:24:59 UTC
Git commit 15e0c2a98f480f203ce168b6fa9a2e1f2b0ed8f8 by Akseli Lahtinen.
Committed on 29/11/2024 at 09:24.
Pushed by akselmo into branch 'master'.

Make "open path" and "open path in new tab" scroll to the selected item

**Open Path**

When user clicks on "Open Path" after searching for an item,
user expects the view to show the item immediately.

We wait for the KItemListSmoothScroller to be done with its animation before the
scrollbar sizes are being changed.

**Open Path in New Tab**

When user selects "Open Path in New Tab", we open a new tab to the folder where the file is, then select and set the file current. We need to get the correct tab when opening one, so it has been added as a return value.

M  +5    -1    src/dolphincontextmenu.cpp
M  +2    -2    src/dolphinmainwindow.cpp
M  +2    -1    src/dolphinmainwindow.h
M  +2    -1    src/dolphintabwidget.cpp
M  +4    -3    src/dolphintabwidget.h
M  +12   -0    src/kitemviews/kitemlistcontainer.cpp
M  +8    -0    src/kitemviews/private/kitemlistsmoothscroller.cpp
M  +1    -0    src/kitemviews/private/kitemlistsmoothscroller.h

https://invent.kde.org/system/dolphin/-/commit/15e0c2a98f480f203ce168b6fa9a2e1f2b0ed8f8