src/dolphintabwidget.h
@@ -132,10 +132,11 @@ public Q_SLOTS:
     /**
      * Opens a new tab in the background showing the URL \a primaryUrl and the
      * optional URL \a secondaryUrl.
+     * @return A pointer to the opened DolphinTabPage.
      */
-    void openNewTab(const QUrl &primaryUrl,
-                    const QUrl &secondaryUrl = QUrl(),
-                    DolphinTabWidget::NewTabPosition position = DolphinTabWidget::NewTabPosition::FollowSetting);
+    DolphinTabPage *openNewTab(const QUrl &primaryUrl,
+                               const QUrl &secondaryUrl = QUrl(),
+                               DolphinTabWidget::NewTabPosition position = DolphinTabWidget::NewTabPosition::FollowSetting);
 
     /**
      * Opens each directory in \p dirs in a separate tab unless it is already open.
